update projeto loja

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://kit.fontawesome.com/af14f3aaa9.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <!-- icon : sacola : <i class="fa-regular fa-bag-shopping"></i> -->
 
@@ -22,8 +24,7 @@
             <div class="redes_sociais">
                 <ul>
                     <li><a href="" class="rs-1"><i class="rs-1 fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://wa.me/5591980310565" target="
-                        " class="rs-2"><i class="rs-2 fa-brands fa-whatsapp"></i></a></li>
+                    <li><a href="https://wa.me/5591980310565" target="_blank" class="rs-2"><i class="rs-2 fa-brands fa-whatsapp"></i></a></li>
                     <li><a href="" class="rs-3"><i class="rs-3 fa-brands fa-linkedin"></i></a></li>
                 </ul>
             </div>
@@ -31,16 +32,117 @@
         <nav class="categorias">
             <ul>
                 <li>
-                    Avon
+                    <p><span>Avon</span><i class="fa-solid fa-angle-down"></i></p>
+                    <ul class="sub_menu avon">
+                        <li>Perfumes</li>
+                        <li>Hidradantes</li>
+                        <li>Maquiagem</li>
+                        <li>Kids</li>
+                    </ul>
                 </li>
-                <li>Natura</li>
-                <li>Boticário</li>
-                <li>Romance</li>
+                <li>
+                    <p><span>Natura</span><i class="fa-solid fa-angle-down"></i></p>
+                    <ul class="sub_menu natura">
+                        <li>Perfumes</li>
+                        <li>Hidradantes</li>
+                        <li>Maquiagem</li>
+                        <li>Kids</li>
+                    </ul>
+                </li>
+                <li>
+                    <p><span>Boticário</span><i class="fa-solid fa-angle-down"></i></p>
+                    <ul class="sub_menu boticario">
+                        <li>Perfumes</li>
+                        <li>Hidradantes</li>
+                        <li>Maquiagem</li>
+                        <li>Kids</li>
+                    </ul>
+                </li>
+                <li>
+                    <p><span>Romance</span><i class="fa-solid fa-angle-down"></i></p>
+                    <ul class="sub_menu romance">
+                        <li>Calcinhas</li>
+                        <li>sutiãs</li>
+                        <li>calças</li>
+                        <li>calças legins</li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
-    
+
+    <section class="home">
+        <div class="container">
+            <div class="sobre">
+                <h3>Casa das sacolas</h3>
+                <h1>Cosméticos e Variedades em Geral</h1>
+                <button>Saiba mais</button>
+            </div>
+
+            <div class="image_sobre">
+                <img src="./assets/img/—Pngtree—cartoon beauty makeup posters vector_868270.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="produtos">
+        <div class="container_produtos">
+            <div class="titulo">
+                <select name="" id="">
+                    <option selected value="Avon">Avon</option>
+                    <option value="Natura">Natura</option>
+                    <option value="Boticario">Boticário</option>
+                    <option value="Romance">Romance</option>
+                </select>
+            </div>
+            <div class="secao_produtos">
+                <div class="titulo_produtos">
+                    <ul>
+                        <button>Perfumes</button>
+                        <button>Hidradantes</button>
+                        <button>Maquiagem</button>
+                        <button>kids</button>
+                    </ul>
+                </div>
+                <div class="cards_produtos">
+                    <ul>
+                        <li>
+                            <img src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <div>
+                                <h2><i class="fa-solid fa-spray-can-sparkles"></i><span>lilly</span></h2>
+                                <p></p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <div>
+                                <h2><i class="fa-solid fa-spray-can-sparkles"></i><span>lilly</span></h2>
+                                <p></p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <div>
+                                <h2><i class="fa-solid fa-spray-can-sparkles"></i><span>lilly</span></h2>
+                                <p>Glamour</p>
+                                <p>adocicado floral</p>
+                                <p>Deo parfum 50 ml</p>
+                                <h4>R$ 94,90</h4>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <div>
+                                <h2><i class="fa-solid fa-spray-can-sparkles"></i> <span>lilly</span></h2>
+                                <p></p>
+                            </div>
+                        </li>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
 <script src="./assets/scripts/script.js"></script>
+
 </html>
