--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
         <div class="container_produtos">
             <div class="titulo">
                 <select name="" id="">
-                    <option selected value="Avon">Avon</option>
-                    <option value="Natura">Natura</option>
-                    <option value="Boticario">Boticário</option>
-                    <option value="Romance">Romance</option>
+                    <option selected value="avon">Avon</option>
+                    <option value="natura">Natura</option>
+                    <option value="boticario">Boticário</option>
+                    <option value="romance">Romance</option>
                 </select>
             </div>
             <div class="secao_produtos">
                 <div class="titulo_produtos">
                     <ul>
-                        <button>Perfumes</button>
-                        <button>Hidradantes</button>
-                        <button>Maquiagem</button>
-                        <button>kids</button>
+                        <button value="perfumes" class="ativos">Perfumes</button>
+                        <button value="hidradantes">Hidradantes</button>
+                        <button value="maquiagem">Maquiagem</button>
+                        <button value="kids">kids</button>
                     </ul>
                 </div>
                 <div class="cards_produtos">
