--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./main/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://kit.fontawesome.com/af14f3aaa9.js" crossorigin="anonymous"></script>
 </head>
 
@@ -16,7 +16,7 @@
     <header>
         <nav class="main-menu">
             <div class="menu-logo">
-                <img src="./main/img/bolsa-de-compras.png" alt="">
+                <img src="./assets/img/bolsa-de-compras.png" alt="">
             </div>
             <div class="logo-texto">
                 <h1>Casa das sacolas</h1>
@@ -48,7 +48,7 @@
             </div>
 
             <div class="home-image-sobre">
-                <img src="./main/img/—Pngtree—cartoon beauty makeup posters vector_868270.png" alt="">
+                <img src="./assets/img/—Pngtree—cartoon beauty makeup posters vector_868270.png" alt="">
             </div>
         </div>
     </section>
@@ -81,28 +81,28 @@
                 <div class="promocoes-cards-produtos">
                     <ul>
                         <li>
-                            <img src="./main/img/listFotos/avon/perfumes/p01.jpg" alt="">
+                            <img src="./assets/img/listFotos/avon/perfumes/p01.jpg" alt="">
                             <div>
                                 <h2><i class="fa-solid fa-spray-can-sparkles"></i><span>lilly</span></h2>
                                 <p></p>
                             </div>
                         </li>
                         <li>
-                            <img src="./main/img/listFotos/avon/perfumes/p02.jpg" alt="">
+                            <img src="./assets/img/listFotos/avon/perfumes/p02.jpg" alt="">
                             <div>
                                 <h2><i class="fa-solid fa-spray-can-sparkles"></i><span>lilly</span></h2>
                                 <p></p>
                             </div>
                         </li>
                         <li>
-                            <img src="./main/img/listFotos/avon/perfumes/p03.jpg" alt="">
+                            <img src="./assets/img/listFotos/avon/perfumes/p03.jpg" alt="">
                             <div>
                                 <h2><i class="fa-solid fa-spray-can-sparkles"></i><span>lilly</span></h2>
                                 <p></p>
                             </div>
                         </li>
                         <li>
-                            <img src="./main/img/listFotos/avon/perfumes/p04.jpg" alt="">
+                            <img src="./assets/img/listFotos/avon/perfumes/p04.jpg" alt="">
                             <div>
                                 <h2><i class="fa-solid fa-spray-can-sparkles"></i> <span>lilly</span></h2>
                                 <p></p>
@@ -129,26 +129,26 @@
                     <h1>Cosméticos e Roupas de marcas</h1>
                     <div class="produtos-imagens-cards">
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                             
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
@@ -159,25 +159,25 @@
                     <h1>Remédios Medicinais</h1>
                     <div class="produtos-imagens-cards">
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
@@ -188,25 +188,25 @@
                     <h1>Descartáveis</h1>
                     <div class="produtos-imagens-cards">
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./main/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
@@ -222,6 +222,6 @@
     </section>
 
 </body>
-<script src="./main/scripts/script.js"></script>
+<script src="./assets/scripts/script.js"></script>
 
 </html>
