--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="main-menu">
             <div class="menu-logo">
-                <img src="./assets/img/bolsa-de-compras.png" alt="">
+                <img src="./assets/img//logos-home/bolsa-menu.png" alt="">
             </div>
             <div class="logo-texto">
                 <h1>Casa das sacolas</h1>
@@ -48,7 +48,7 @@
             </div>
 
             <div class="home-image-sobre">
-                <img src="./assets/img/—Pngtree—cartoon beauty makeup posters vector_868270.png" alt="">
+                <img src="./assets/img/logos-home/home-logo01.png" alt="">
             </div>
         </div>
     </section>
@@ -129,26 +129,26 @@
                     <h1>Cosméticos e Roupas de marcas</h1>
                     <div class="produtos-imagens-cards">
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                             
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
@@ -159,25 +159,25 @@
                     <h1>Remédios Medicinais</h1>
                     <div class="produtos-imagens-cards">
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
@@ -188,25 +188,25 @@
                     <h1>Descartáveis</h1>
                     <div class="produtos-imagens-cards">
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
 
                         <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/frasco-de-perfume-de-vista-frontal-no-fundo-desfocado-biege.jpg" alt="">
+                            <img class="produtos-img" src="./assets/img/" alt="">
                             <p class="preco-produtos">R$99,99</p>
                             <a href="" class="btn-link-produtos">Tenho interesse</a>
                         </div>
