--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </section>
 
-    <!-- <section class="promocoes">
+    <section class="promocoes">
         <div class="main-promocoes">
 
             <button class="angle an-1"><i class="fa-solid fa-angles-right"></i></button>
@@ -139,7 +139,7 @@
         </div>
     </section>
 
-    <section class="secao-produtos">
+    <!-- <section class="secao-produtos">
         <div class="main-produtos">
             <div class="produtos-header">
                 <h1>Produtos</h1>
