removendo o select e testanto outro jeito

--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 
     <header>
         <nav class="main-menu">
-            <div class="menu-logo">
-                <img src="./assets/img//logos-home/bolsa-menu.png" alt="">
-            </div>
 
             <div class="menu-mobile">
                 <div class="line1"></div>
@@ -27,7 +24,7 @@
             </div>
 
             <div class="logo-texto">
-                <h1>Casa das sacolas</h1>
+                <h1>Casa <span>das</span> sacolas</h1>
             </div>
             <div class="redes-sociais">
                 <ul>
@@ -54,7 +51,7 @@
                 </div>
             </ul>
 
-            
+
 
         </nav>
     </header>
@@ -82,14 +79,10 @@
             <button class="angle an-2"><i class="fa-solid fa-angles-right"></i></button>
 
             <div class="main-promocoes-selection">
-                <select name="" id="">
-                    <option selected value="avon">Avon</option>
-                    <option value="natura">Natura</option>
-                    <option value="boticario">Boticário</option>
-                    <option value="romance">Romance</option>
-                </select>
-
-                <i class="fa-solid fa-angle-down angleOn"></i>
+                <button value="avon" class="button-promocoes ativos">Avon</button>
+                <button value="natura" class="button-promocoes">Natura</button>
+                <button value="boticario" class="button-promocoes">Boticário</button>
+                <button value="romance" class="button-promocoes">Romance</button>
             </div>
             <div class="secao-promocoes-produtos">
                 <div class="promocoes-header-produtos">
@@ -105,30 +98,42 @@
                         <li>
                             <img src="./assets/img/listFotos/avon/perfumes/p01.jpg" alt="">
                             <div>
-                                <h2><i class="fa-solid fa-spray-can-sparkles"></i><span>lilly</span></h2>
-                                <p></p>
+                                <p class="marca-promocoes">Essencial</p>
+                                <p class="modelo-promocoes">Essencial masculino 250Ml</p>
+                                <p class="preco-antigo-promocoes">R$ 99,99</p>
+                                <p class="preco-atual-promocoes">R$ 99,99</p>
                             </div>
+                            <button class="button-interesse">Tenho interesse</button>
                         </li>
                         <li>
                             <img src="./assets/img/listFotos/avon/perfumes/p02.jpg" alt="">
                             <div>
-                                <h2><i class="fa-solid fa-spray-can-sparkles"></i><span>lilly</span></h2>
-                                <p></p>
+                                <p class="marca-promocoes">Essencial</p>
+                                <p class="modelo-promocoes">Essencial masculino 250Ml</p>
+                                <p class="preco-antigo-promocoes">R$ 99,99</p>
+                                <p class="preco-atual-promocoes">R$ 99,99</p>
                             </div>
+                            <button class="button-interesse">Tenho interesse</button>
                         </li>
                         <li>
                             <img src="./assets/img/listFotos/avon/perfumes/p03.jpg" alt="">
                             <div>
-                                <h2><i class="fa-solid fa-spray-can-sparkles"></i><span>lilly</span></h2>
-                                <p></p>
+                                <p class="marca-promocoes">Essencial</p>
+                                <p class="modelo-promocoes">Essencial masculino 250Ml</p>
+                                <p class="preco-antigo-promocoes">R$ 99,99</p>
+                                <p class="preco-atual-promocoes">R$ 99,99</p>
                             </div>
+                            <button class="button-interesse">Tenho interesse</button>
                         </li>
                         <li>
                             <img src="./assets/img/listFotos/avon/perfumes/p04.jpg" alt="">
                             <div>
-                                <h2><i class="fa-solid fa-spray-can-sparkles"></i> <span>lilly</span></h2>
-                                <p></p>
+                                <p class="marca-promocoes">Essencial</p>
+                                <p class="modelo-promocoes">Essencial masculino 250Ml</p>
+                                <p class="preco-antigo-promocoes">R$ 99,99</p>
+                                <p class="preco-atual-promocoes">R$ 99,99</p>
                             </div>
+                            <button class="button-interesse">Tenho interesse</button>
                         </li>
 
                         <li>
@@ -139,7 +144,7 @@
         </div>
     </section>
 
-    <!-- <section class="secao-produtos">
+    <section class="secao-produtos">
         <div class="main-produtos">
             <div class="produtos-header">
                 <h1>Produtos</h1>
@@ -241,7 +246,7 @@
 
     <section class="contato">
 
-    </section> -->
+    </section>
 
 </body>
 <script src="./assets/scripts/navbar.js"></script>
