--- a/index.html
+++ b/index.html
@@ -155,58 +155,65 @@
                 <div class="produtos-categorias">
                     <h1>Cosméticos e Roupas de marcas</h1>
                     <div class="produtos-imagens-cards">
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
+                        <div class="main-produtos-cards">
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            </div>
+
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
+
+                            </div>
+
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            </div>
+
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            </div>
                         </div>
 
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
 
-                        </div>
-
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
-                        </div>
-
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
-                        </div>
                     </div>
                 </div>
 
                 <div class="produtos-categorias">
                     <h1>Remédios Medicinais</h1>
                     <div class="produtos-imagens-cards">
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
-                        </div>
+                        <div class="main-produtos-cards">
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            </div>
 
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
-                        </div>
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
 
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
-                        </div>
+                            </div>
 
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            </div>
+
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -214,28 +221,31 @@
                 <div class="produtos-categorias">
                     <h1>Descartáveis</h1>
                     <div class="produtos-imagens-cards">
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
-                        </div>
+                        <div class="main-produtos-cards">
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            </div>
 
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
-                        </div>
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
 
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
-                        </div>
+                            </div>
 
-                        <div class="produtos-cards">
-                            <img class="produtos-img" src="./assets/img/" alt="">
-                            <p class="preco-produtos">R$99,99</p>
-                            <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            </div>
+
+                            <div class="produtos-cards">
+                                <img class="produtos-img" src="./assets/img/" alt="">
+                                <p class="preco-produtos">R$99,99</p>
+                                <a href="" class="btn-link-produtos">Tenho interesse</a>
+                            </div>
                         </div>
                     </div>
                 </div>
